@@ -51,7 +51,6 @@ val ktlintCheck by tasks.creating(JavaExec::class) {
 
     description = "Check Kotlin code style."
     classpath = ktlint
-    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
     mainClass.set("com.pinterest.ktlint.Main")
     args = listOf("src/**/*.kt")
 }
@@ -62,7 +61,6 @@ val ktlintFormat by tasks.creating(JavaExec::class) {
 
     description = "Fix Kotlin code style deviations."
     classpath = ktlint
-    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
     mainClass.set("com.pinterest.ktlint.Main")
     args = listOf("-F", "src/**/*.kt")
 }
